# openstack-image-manager

./: .clouds.yml  .gitignore  .travis.yml  .yamale.yml  .yamllint.yml  .zuul.yaml  Containerfile  LICENSE  MANIFEST.in  Pipfile  README.md  _config.yml  clouds.yml  clouds.yml.enc  clouds.yml.sample  images.py  images.yml  mypy.ini  pyproject.toml  requirements.txt  secure.yml.sample  setup.cfg  test-requirements.txt  tox.ini
.github/: clouds.yml  renovate.json
.github/workflows/: build-container-image.yml  build-documentation.yml  check-docker-syntax.yml  check-python-syntax.yml  check-updates.yml  check-yaml-syntax.yml  mirror-images-dry-run.yml  mirror-images.yml  pr-labeler.yml  publish.yml  run-integration-tests.yml  run-real-world-tests.yml  run-unit-tests.yml  test-python-setup.yml  update-image-gardenlinux.yml  update-images.yml  validate-config.yml  validate-configuration.yml
contrib/: check_updates.py  mirror.py  table.py  update-gardenlinux.py  update.py
crawler/: LICENSE  README.md  git_ssh_command.sh  historian.py  image-crawler.py  requirements.txt  setup.sh
crawler/crawler/core/: config.py  (+3 more)
crawler/docker/: Dockerfile  README.md
crawler/docs/: background.md  git-handling.md  templates.md
crawler/etc/: config.yaml  image-sources.yaml
crawler/lib/: initialize-image-catalog.sql  populate-catalog-test-data.sql
crawler/templates/: almalinux.yml.j2  debian.yml.j2  header.yml  ubuntu.yml.j2  ubuntu_minimal.yml.j2
doc/: configuration.md  getting_started.md  quickstart.md  requirements.txt  tox.ini
doc/source/: conf.py  configuration.rst  contribute.rst  getting_started.md  index.rst  notes.rst  overview.md  requirements.rst  usage.rst
documentation/source/: configuration.rst  contribute.rst  index.rst  notes.rst  requirements.rst  usage.rst
etc/: images-must-be-migrated.yml  images.yml  schema.yaml
etc/images/: almalinux.yml  amphora.yml  centos.yml  cirros.yml  clearlinux.yml  debian.yml  fedora-coreos.yml  fedora.yml  flatcar.yml  gardenlinux.yml  kubernetes.yml  octavia.yml  opensense.yml  opensuse.yml  opnsense.yml  osism.yml  rancher.yml  rockylinux.yml  talos.yml  ubuntu.yml  ubuntu_core.yml
openstack_image_manager/: __init__.py  main.py  manage.py  mirror.py  table.py  update.py
playbooks/: integration-test.yml  mirror-images.yml  pre-integration-test.yml  pre-mirror-images.yml  pre-real-world-test.yml  pre-real-world.yml  real-world-test.yml  real-world.yml
scripts/: build.sh  entrypoint.sh  push.sh
src/: __init__.py  check.py  images.py  main.py  manage.py  mirror.py  share.py  table.py  update.py
test/: test_manage.py
test/integration/: test_manage_api.py
test/unit/: test_check_updates.py  test_manage.py  test_update.py
(+16 files in other folders)
