[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "openstack-image-manager"
description = "OpenStack image manager"
authors = [
  { name = "OSISM community", email = "info@osism.tech" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
requires-python = ">=3.8"
dynamic = ["dependencies", "version"]

[tool.mypy]
exclude = ["doc"]

[tool.setuptools]
packages = ["openstack_image_manager", "openstack_image_manager.etc"]
package-dir = {"openstack_image_manager.etc" = "etc"}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.package-data]
"openstack_image_manager.etc" = ["**/*"]

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}"
dirty_template = "{tag}"

[project.scripts]
openstack-image-manager = "openstack_image_manager.main:main"

[project.urls]
"Homepage" = "https://github.com/osism/openstack-image-manager"
"Bug Tracker" = "https://github.com/osism/openstack-image-manager/issues"
