[metadata]
name = openstack-image-manager
summary = OpenStack image manager
description_file =
    README.md
license = Apache-2.0
long_description = file: README.md
long_description_content_type = text/markdown
author = OSISM community
author_email = info@osism.tech
home_page = https://github.com/osism/openstack-image-manager
python_requires = >=3.8
install_requires = file: requirements.txt
classifier =
   Development Status :: 5 - Production/Stable
   Environment :: Console
   Intended Audience :: Information Technology
   License :: OSI Approved :: Apache Software License
   Operating System :: OS Independent
   Programming Language :: Python
   Programming Language :: Python :: 3 :: Only
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.8
   Programming Language :: Python :: 3.9
   Programming Language :: Python :: 3.10

[files]
packages =
    oim

[entry_points]
console_scripts =
    openstack-image-manager = oim.manage:main
